WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205938
REGRESSION: (
r254186
) [ Mac ] inspector/css/add-rule.html is failing
https://bugs.webkit.org/show_bug.cgi?id=205938
Summary
REGRESSION: (r254186) [ Mac ] inspector/css/add-rule.html is failing
Truitt Savell
Reported
2020-01-08 10:46:56 PST
inspector/css/add-rule.html Description: This test began failing after the changes in
https://trac.webkit.org/changeset/254186/webkit
History:
https://results.webkit.org/?suite=layout-tests&test=inspector%2Fcss%2Fadd-rule.html
Diff: --- /Volumes/Data/slave/mojave-release-tests-wk2/build/layout-test-results/inspector/css/add-rule-expected.txt +++ /Volumes/Data/slave/mojave-release-tests-wk2/build/layout-test-results/inspector/css/add-rule-actual.txt @@ -4,14 +4,12 @@ == Running test suite: CSS.addRule -- Running test case: CSS.addRule.InNonExistingInspectorStyleSheet PASS: Should not have any inspector style sheets for the main frame. -PASS: Rule selector should be "body" -PASS: Rule range should be [0:0,0:4] -PASS: Rule origin should be "inspector" +!! EXCEPTION: NotFoundError +Stack Trace: #0: (anonymous) ((unknown)) -- Running test case: CSS.addRule.InExistingInspectorStyleSheet -PASS: Rule selector should be "div" -PASS: Rule range should be [1:0,1:3] -PASS: Rule origin should be "inspector" +!! EXCEPTION: NotFoundError +Stack Trace: #0: (anonymous) ((unknown)) -- Running test case: CSS.addRule.ExternalStyleSheet PASS: Rule selector should be "div"
Attachments
Patch
(4.78 KB, patch)
2020-01-08 11:57 PST
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-01-08 10:47:10 PST
<
rdar://problem/58413597
>
Devin Rousso
Comment 2
2020-01-08 11:57:34 PST
Created
attachment 387124
[details]
Patch
Blaze Burg
Comment 3
2020-01-08 12:28:46 PST
Comment on
attachment 387124
[details]
Patch =mews
WebKit Commit Bot
Comment 4
2020-01-08 14:22:18 PST
Comment on
attachment 387124
[details]
Patch Clearing flags on attachment: 387124 Committed
r254228
: <
https://trac.webkit.org/changeset/254228
>
WebKit Commit Bot
Comment 5
2020-01-08 14:22:20 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug