REGRESSION: (r254186) [ Mac ] inspector/css/add-rule.html is failing https://bugs.webkit.org/show_bug.cgi?id=205938 <rdar://problem/58413597>

Reviewed by Brian Burg.

Source/WebCore:

Covered by existing tests.

* inspector/InspectorStyleSheet.cpp:
(WebCore::InspectorStyleSheet::originalStyleSheetText const):
(WebCore::InspectorStyleSheet::resourceStyleSheetText const):
(WebCore::InspectorStyleSheet::inlineStyleSheetText const):
(WebCore::InspectorStyleSheet::extensionStyleSheetText const):
The Inspector Style Sheet is an inline style sheet, so it goes through `inlineStyleSheetText`
instead of `resourceStyleSheetText`. Style sheets are only be sourced from one place anyways
so there's no reason to gate each function based on the `origin`.

Source/WebInspectorUI:

* UserInterface/Models/CSSStyleSheet.js:
(WI.CSSStyleSheet.prototype.get injected):
`scheme` can be `null`, so check that it exists before calling `String.prototype` functions.


Canonical link: https://commits.webkit.org/219085@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254228 268f45cc-cd09-0410-ab3c-d52691b4dbfc